[package]
name = "vector"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raqote = "*"
pathfinder_content = { path = "../pathfinder/content" } #{ git = "https://github.com/s3bk/pathfinder/" }
pathfinder_renderer = { path = "../pathfinder/renderer" } #{ git = "https://github.com/s3bk/pathfinder/" }
pathfinder_geometry = { path = "../pathfinder/geometry" } #{ git = "https://github.com/s3bk/pathfinder/" }
itertools = "*"
